--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./assets/images/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/js/main.js" defer></script>
-    <title>Vite App</title>
+    <title>Creative Scroll | GSAP</title>
   </head>
   <body>
     <main>
-      {{> demo}}
     </main>
   </body>
 </html>
