Feat: added animations

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
     <title>Creative Scroll | GSAP</title>
   </head>
   <body>
-    <main>
-      {{> sections/hero}}
-      {{> sections/gallery}}
-    </main>
+    <div class="smooth-wrapper">
+      <main class="smooth-content">
+        {{> sections/hero}}
+        {{> sections/gallery}}
+      </main>
+    </div>
   </body>
 </html>
